--- a/labs/lab12/presentation/os2--lab12--presentation.qmd
+++ b/labs/lab12/presentation/os2--lab12--presentation.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,10 +14,10 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
+title: "Лабораторная работа № 12"
+subtitle: "Настройки сети в Linux"
 license: CC BY
-date: 1970-01-01
+date: 2025-11-22
 ## Generic options
 lang: ru-RU
 crossref:
@@ -26,8 +26,13 @@ crossref:
   lol-title: Листинги
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   beamer:
+    include-in-header:
+      text: |
+        \usepackage{fontspec}
+        \setmainfont{Noto Serif}
+        \setsansfont{Noto Sans}
     toc: true
     toc-title: Содержание
     number-sections: true
@@ -38,10 +43,10 @@ format:
     section-titles: true
     theme: metropolis
     themeoptions: progressbar=frametitle,sectionpage=progressbar,numbering=fraction
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-### Html output
+  ### Html output
   revealjs:
     transition: slide
     margin: 0.2
@@ -55,178 +60,225 @@ format:
 
 ## Докладчик
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
-
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
-
-:::
-::: {.column width="30%"}
-
-![](./image/kulyabov.jpg)
-
-:::
-::::::::::::::
+- Гелдиев Ыхлас
+- студент
+- Российский университет дружбы народов им. П. Лумумбы
+- [1032249184@pfur.ru](mailto:1032249184@pfur.ru)
+- <https://geldiyevy.github.io/ru/>
 
 # Вводная часть
 
-## Актуальность
+## Цель работы
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+Получить навыки настройки сетевых параметров системы.
 
-## Объект и предмет исследования
+## Задание
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+1. Продемонстрируйте навыки использования утилиты ip (см. раздел 12.4.1).
+2. Продемонстрируйте навыки использования утилиты nmcli (см. раздел 12.4.2 и 12.4.3).
 
-## Цели и задачи
+# Выполнение лабораторной работы
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+# Проверка конфигурации сети
 
-## Материалы и методы
+## Получите полномочия администратора:
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+su -
 
-# Создание презентации
+![1](image/1.png)
 
-## Процессор `pandoc`
+## Выведите на экран информацию о существующих сетевых подключениях, а также
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+статистику о количестве отправленных пакетов и связанных с ними сообщениях об
+ошибках:
+ip -s link
 
-## Формат `pdf`
+![2](image/2.png)
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+## Поясните в отчёте полученную информацию об одном из интерфейсов.
 
-## Код для формата `pdf`
+Интерфейс enp0s3:
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+- Статус: Интерфейс находится в состоянии UP (активен программно) и LOWER_UP (физическое соединение установлено).
+- Физический адрес (MAC): 08:00:27:0d:ea:d2.
+- Входящий трафик (RX): Получено 6462 байта (всего 49 пакетов). Ошибки приема (errors, dropped) отсутствуют (0).
+- Исходящий трафик (TX): Отправлено 9960 байт (всего 93 пакета). Ошибки передачи отсутствуют (0).
 
-## Формат `html`
+## Выведите на экран информацию о текущих маршрутах:
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+ip route show
 
-## Код для формата `html`
+![3](image/3.png)
 
-- Тема задаётся в файле `Makefile`
+## Поясните в отчёте выведенную на экран информацию.
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+- Маршрут по умолчанию (default): Весь трафик, адресованный в внешние сети (интернет), отправляется через шлюз 10.0.2.2 (используя интерфейс enp0s3).
+- Локальная сеть (10.0.2.0/24): Устройства в этой подсети доступны напрямую через интерфейс enp0s3 без использования шлюза.
+- src 10.0.2.15: Текущий IP-адрес вашего устройства, с которого отправляются пакеты.
 
-## Получающиеся форматы
+## Выведите на экран информацию о текущих назначениях адресов для сетевых интерфейсов на устройстве:
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+ip addr show
 
-# Элементы презентации
+![4](image/4.png)
 
-## Актуальность
+## Поясните в отчёте полученную информацию для одного из интерфейсов. Определите IPv4-адрес устройства и обозначение сетевого адаптера.
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+Интерфейс enp0s3:
 
-## Цели и задачи
+- IPv4-адрес устройства: 10.0.2.15 (маска подсети /24, широковещательный адрес 10.0.2.255).
+- link/ether: Физический (MAC) адрес устройства — 08:00:27:0d:ea:d2.
+- inet6: Устройству также присвоены адреса протокола IPv6 (локальный fe80::... и глобальный fd00::...).
+- Статус: Интерфейс активен (UP, LOWER_UP).
 
-- Не формулируйте более 1--2 целей исследования
+## Используйте команду ping для проверки правильности подключения к Интернету.
 
-## Материалы и методы
+Например, для отправки четырёх пакетов на IP-адрес 8.8.8.8 введите
+ping -c 4 8.8.8.8
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
+![5](image/5.png)
 
-## Содержание исследования
+## Добавьте дополнительный адрес к вашему интерфейсу:
 
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
+ip addr add 10.0.0.10/24 dev <yourdevicename>
+Здесь <yourdevicename> — название интерфейса, которому добавляется
+IP-адрес.
 
-## Результаты
+![6](image/6.png)
 
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+## Проверьте, что адрес добавился:
 
+ip addr show
 
-## Итоговый слайд
+![7](image/7.png)
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+## Сравните вывод информации от утилиты ip и от команды ifconfig:
 
-# Рекомендую
+ifconfig
 
-## Принцип 10/20/30
+![8](image/8.png)
 
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
+## Выведите на экран список всех прослушиваемых системой портов UDP и TCP:
 
-## Связь слайдов
+ss -tul
 
-::: incremental
+![9](image/9.png)
 
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
+# Управление сетевыми подключениями с помощью nmcli
 
-:::
+## Получите полномочия администратора. Выведите на экран информацию о текущих соединениях:
 
-## Количество сущностей
+nmcli connection show
 
-::: incremental
+![10](image/10.png)
 
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
+## Добавьте Ethernet-соединение с именем dhcp к интерфейсу:
 
-:::
+nmcli connection add con-name "dhcp" type ethernet ifname <ifname>
+Здесь вместо <ifname> должно быть указано название интерфейса.
 
-## Общие рекомендации
+![11](image/11.png)
 
-::: incremental
+## Добавьте к этому же интерфейсу Ethernet-соединение с именем static, статическим IPv4-адресом адаптера и статическим адресом шлюза:
 
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
+nmcli connection add con-name "static" ifname <ifname> autoconnect no type ethernet ip4 10.0.0.10/24 gw4 10.0.0.1 ifname <ifname>
+Здесь вместо <ifname> должно быть указано название интерфейса.
 
-:::
+![12](image/12.png)
 
-## Представление данных
+## Выведите информацию о текущих соединениях:
 
-::: incremental
+nmcli connection show
 
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
+![13](image/13.png)
 
-:::
+## Переключитесь на статическое соединение:
+
+nmcli connection up "static"
+
+![14](image/14.png)
+
+## Проверьте успешность переключения при помощи nmcli connection show и ip addr.
+
+![15](image/15.png)
+
+## Вернитесь к соединению dhcp:
+
+nmcli connection up "dhcp"
+
+![16](image/16.png)
+
+## Проверьте успешность переключения при помощи nmcli connection show и ip addr
+
+![17](image/17.png)
+
+# Изменение параметров соединения с помощью nmcli
+
+## Отключите автоподключение статического соединения:
+
+nmcli connection modify "static" connection.autoconnect no
+
+![18](image/18.png)
+
+## Добавьте DNS-сервер в статическое соединение:
+
+nmcli connection modify "static" ipv4.dns 10.0.0.10
+Обратите внимание, что при добавлении сетевого подключения используется ip4, а при изменении параметров для существующего соединения используется ipv4.
+
+![19](image/19.png)
+
+## Для добавления второго и последующих элементов для тех же параметров используется знак +. Если этот знак проигнорировать, то произойдёт замена, а не добавление элемента. Добавьте второй DNS-сервер:
+
+nmcli connection modify "static" +ipv4.dns 8.8.8.8
+
+![20](image/20.png)
+
+## Измените IP-адрес статического соединения:
+
+nmcli connection modify "static" ipv4.addresses 10.0.0.20/24
+
+![21](image/21.png)
+
+## Добавьте другой IP-адрес для статического соединения:
+
+nmcli connection modify "static" +ipv4.addresses 10.20.30.40/16
+
+![22](image/22.png)
+
+## После изменения свойств соединения активируйте его:
+
+nmcli connection up "static"
+
+![23](image/23.png)
+
+## Проверьте успешность переключения при помощи nmcli con show и ip addr.
+
+![24](image/24.png)
+
+## Используя nmtui.
+
+![25](image/25.png)
+
+## Посмотрите и опишите в отчёте настройки сети на устройстве
+
+Настройки сети enp0s3:
+
+- Метод настройки (IPv4 и IPv6): Выбран режим «Automatic» (Автоматически). Это означает, что IP-адрес, шлюз и DNS-серверы устройство получает динамически от DHCP-сервера. Статические адреса не заданы.
+- Параметры запуска:
+  - Automatically connect: Включено (интерфейс поднимается автоматически при загрузке системы).
+  - Available to all users: Включено (соединение доступно всем пользователям системы, а не только текущему).
+
+## Посмотрите настройки сетевых соединений в графическом интерфейсе операционной системы.
+
+![26](image/26.png)
+
+## Переключитесь на первоначальное сетевое соединение:
+
+nmcli connection up "<ifname>"
+Здесь вместо <ifname> должно быть указано название интерфейса.
+
+![27](image/27.png)
+
+## Выводы
+
+Я получил навыки настройки сетевых параметров системы.
