--- a/labs/lab12/report/os2--lab12--report.qmd
+++ b/labs/lab12/report/os2--lab12--report.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,8 +14,8 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа № 12"
+subtitle: "Настройки сети в Linux"
 license: "CC BY"
 ## Generic options
 lang: ru-RU
@@ -34,7 +34,7 @@ bibliography:
 csl: _resources/csl/gost-r-7-0-5-2008-numeric.csl
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   pdf:
     toc: true
     number-sections: true
@@ -42,22 +42,22 @@ format:
     toc-depth: 2
     lof: true # List of figures
     lot: true # List of tables
-#### Document
+    #### Document
     documentclass: scrreprt
     papersize: a4
     fontsize: 12pt
     linestretch: 1.5
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-#### Biblatex
+    #### Biblatex
     cite-method: biblatex
     biblio-style: gost-numeric
     biblatexoptions:
       - backend=biber
       - langhook=extras
       - autolang=other*
-#### Misc options
+    #### Misc options
     csquotes: true
     indent: true
     header-includes: |
@@ -65,7 +65,7 @@ format:
       \usepackage{float}
       \floatplacement{figure}{H}
       \usepackage[math,RM={Scale=0.94},SS={Scale=0.94},SScon={Scale=0.94},TT={Scale=MatchLowercase,FakeStretch=0.9},DefaultFeatures={Ligatures=Common}]{plex-otf}
-### Docx output format
+  ### Docx output format
   docx:
     toc: true
     number-sections: true
@@ -74,44 +74,229 @@ format:
 
 # Цель работы
 
-Здесь приводится формулировка цели лабораторной работы. Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.  Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Получить навыки настройки сетевых параметров системы.
 
 # Задание
 
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
-
-# Теоретическое введение
-
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+1. Продемонстрируйте навыки использования утилиты ip (см. раздел 12.4.1).
+2. Продемонстрируйте навыки использования утилиты nmcli (см. раздел 12.4.2 и 12.4.3).
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## Проверка конфигурации сети
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+1. Получите полномочия администратора:
+   su -
+
+   ![1](image/1.png)
+
+2. Выведите на экран информацию о существующих сетевых подключениях, а также
+   статистику о количестве отправленных пакетов и связанных с ними сообщениях об
+   ошибках:
+   ip -s link
+
+   ![2](image/2.png)
+
+   Поясните в отчёте полученную информацию об одном из интерфейсов.
+
+   Интерфейс enp0s3:
+
+   - Статус: Интерфейс находится в состоянии UP (активен программно) и LOWER_UP (физическое соединение установлено).
+   - Физический адрес (MAC): 08:00:27:0d:ea:d2.
+   - Входящий трафик (RX): Получено 6462 байта (всего 49 пакетов). Ошибки приема (errors, dropped) отсутствуют (0).
+   - Исходящий трафик (TX): Отправлено 9960 байт (всего 93 пакета). Ошибки передачи отсутствуют (0).
+
+3. Выведите на экран информацию о текущих маршрутах:
+   ip route show
+
+   ![3](image/3.png)
+
+   Поясните в отчёте выведенную на экран информацию.
+
+   - Маршрут по умолчанию (default): Весь трафик, адресованный в внешние сети (интернет), отправляется через шлюз 10.0.2.2 (используя интерфейс enp0s3).
+   - Локальная сеть (10.0.2.0/24): Устройства в этой подсети доступны напрямую через интерфейс enp0s3 без использования шлюза.
+   - src 10.0.2.15: Текущий IP-адрес вашего устройства, с которого отправляются пакеты.
+
+4. Выведите на экран информацию о текущих назначениях адресов для сетевых интерфейсов на устройстве:
+   ip addr show
+
+   ![4](image/4.png)
+
+   Поясните в отчёте полученную информацию для одного из интерфейсов. Определите IPv4-адрес устройства и обозначение сетевого адаптера.
+
+   Интерфейс enp0s3:
+
+   - IPv4-адрес устройства: 10.0.2.15 (маска подсети /24, широковещательный адрес 10.0.2.255).
+   - link/ether: Физический (MAC) адрес устройства — 08:00:27:0d:ea:d2.
+   - inet6: Устройству также присвоены адреса протокола IPv6 (локальный fe80::... и глобальный fd00::...).
+   - Статус: Интерфейс активен (UP, LOWER_UP).
+
+5. Используйте команду ping для проверки правильности подключения к Интернету.
+   Например, для отправки четырёх пакетов на IP-адрес 8.8.8.8 введите
+   ping -c 4 8.8.8.8
+
+   ![5](image/5.png)
+
+6. Добавьте дополнительный адрес к вашему интерфейсу:
+   ip addr add 10.0.0.10/24 dev <yourdevicename>
+   Здесь <yourdevicename> — название интерфейса, которому добавляется
+   IP-адрес.
+
+   ![6](image/6.png)
+
+7. Проверьте, что адрес добавился:
+   ip addr show
+
+   ![7](image/7.png)
+
+8. Сравните вывод информации от утилиты ip и от команды ifconfig:
+   ifconfig
+
+   ![8](image/8.png)
+
+9. Выведите на экран список всех прослушиваемых системой портов UDP и TCP:
+   ss -tul
+
+   ![9](image/9.png)
+
+## Управление сетевыми подключениями с помощью nmcli
+
+1. Получите полномочия администратора. Выведите на экран информацию о текущих
+   соединениях:
+   nmcli connection show
+
+   ![10](image/10.png)
+
+2. Добавьте Ethernet-соединение с именем dhcp к интерфейсу:
+   nmcli connection add con-name "dhcp" type ethernet ifname <ifname>
+   Здесь вместо <ifname> должно быть указано название интерфейса.
+
+   ![11](image/11.png)
+
+3. Добавьте к этому же интерфейсу Ethernet-соединение с именем static, статическим IPv4-адресом адаптера и статическим адресом шлюза:
+   nmcli connection add con-name "static" ifname <ifname> autoconnect no type ethernet ip4 10.0.0.10/24 gw4 10.0.0.1 ifname <ifname>
+   Здесь вместо <ifname> должно быть указано название интерфейса.
+
+   ![12](image/12.png)
+
+4. Выведите информацию о текущих соединениях:
+   nmcli connection show
+
+   ![13](image/13.png)
+
+5. Переключитесь на статическое соединение:
+   nmcli connection up "static"
+
+   ![14](image/14.png)
+
+   Проверьте успешность переключения при помощи nmcli connection show и ip addr.
+
+   ![15](image/15.png)
+
+6. Вернитесь к соединению dhcp:
+   nmcli connection up "dhcp"
+
+   ![16](image/16.png)
+
+   Проверьте успешность переключения при помощи nmcli connection show и ip addr
+
+   ![17](image/17.png)
+
+## Изменение параметров соединения с помощью nmcli
+
+1. Отключите автоподключение статического соединения:
+   nmcli connection modify "static" connection.autoconnect no
+
+   ![18](image/18.png)
+
+2. Добавьте DNS-сервер в статическое соединение:
+   nmcli connection modify "static" ipv4.dns 10.0.0.10
+   Обратите внимание, что при добавлении сетевого подключения используется ip4, а при изменении параметров для существующего соединения используется ipv4.
+
+   ![19](image/19.png)
+
+3. Для добавления второго и последующих элементов для тех же параметров используется знак +. Если этот знак проигнорировать, то произойдёт замена, а не добавление элемента. Добавьте второй DNS-сервер:
+   nmcli connection modify "static" +ipv4.dns 8.8.8.8
+
+   ![20](image/20.png)
+
+4. Измените IP-адрес статического соединения:
+   nmcli connection modify "static" ipv4.addresses 10.0.0.20/24
+
+   ![21](image/21.png)
+
+5. Добавьте другой IP-адрес для статического соединения:
+   nmcli connection modify "static" +ipv4.addresses 10.20.30.40/16
+
+   ![22](image/22.png)
+
+6. После изменения свойств соединения активируйте его:
+   nmcli connection up "static"
+
+   ![23](image/23.png)
+
+   Проверьте успешность переключения при помощи nmcli con show и ip addr.
+
+   ![24](image/24.png)
+
+7. Используя nmtui, посмотрите и опишите в отчёте настройки сети на устройстве.
+
+   ![25](image/25.png)
+
+   Настройки сети enp0s3:
+
+   - Метод настройки (IPv4 и IPv6): Выбран режим «Automatic» (Автоматически). Это означает, что IP-адрес, шлюз и DNS-серверы устройство получает динамически от DHCP-сервера. Статические адреса не заданы.
+   - Параметры запуска:
+     - Automatically connect: Включено (интерфейс поднимается автоматически при загрузке системы).
+     - Available to all users: Включено (соединение доступно всем пользователям системы, а не только текущему).
+
+8. Посмотрите настройки сетевых соединений в графическом интерфейсе операционной системы.
+
+   ![26](image/26.png)
+
+9. Переключитесь на первоначальное сетевое соединение:
+   nmcli connection up "<ifname>"
+   Здесь вместо <ifname> должно быть указано название интерфейса.
+
+   ![27](image/27.png)
+
+# Контрольные вопросы
+
+1. Какая команда отображает только статус соединения, но не IP-адрес?
+
+- `ip link`
+
+2. Какая служба управляет сетью в ОС типа RHEL?
+
+- NetworkManager
+
+3. Какой файл содержит имя узла (устройства) в ОС типа RHEL?
+
+- `/etc/hostname`
+
+4. Какая команда позволяет вам задать имя узла (устройства)?
+
+- `hostnamectl set-hostname <имя>`
+
+5. Какой конфигурационный файл можно изменить для включения разрешения имён для конкретного IP-адреса?
+
+- `/etc/hosts`
+
+6. Какая команда показывает текущую конфигурацию маршрутизации?
+
+- `ip route show`
+
+7. Как проверить текущий статус службы NetworkManager?
+
+- `systemctl status NetworkManager`
+
+8. Какая команда позволяет вам изменить текущий IP-адрес и шлюз по умолчанию для вашего сетевого соединения?
+
+- `nmcli` (или через псевдографический интерфейс `nmtui`)
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
+Я получил навыки настройки сетевых параметров системы.
 
 # Список литературы{.unnumbered}
 
