--- a/labs/lab13/presentation/os2--lab13--presentation.qmd
+++ b/labs/lab13/presentation/os2--lab13--presentation.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,10 +14,10 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
+title: "Лабораторная работа № 13"
+subtitle: "Фильтр пакетов"
 license: CC BY
-date: 1970-01-01
+date: 2025-11-29
 ## Generic options
 lang: ru-RU
 crossref:
@@ -26,8 +26,13 @@ crossref:
   lol-title: Листинги
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   beamer:
+    include-in-header:
+      text: |
+        \usepackage{fontspec}
+        \setmainfont{Noto Serif}
+        \setsansfont{Noto Sans}
     toc: true
     toc-title: Содержание
     number-sections: true
@@ -38,10 +43,10 @@ format:
     section-titles: true
     theme: metropolis
     themeoptions: progressbar=frametitle,sectionpage=progressbar,numbering=fraction
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-### Html output
+  ### Html output
   revealjs:
     transition: slide
     margin: 0.2
@@ -55,178 +60,211 @@ format:
 
 ## Докладчик
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
-
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
-
-:::
-::: {.column width="30%"}
-
-![](./image/kulyabov.jpg)
-
-:::
-::::::::::::::
+- Гелдиев Ыхлас
+- студент
+- Российский университет дружбы народов им. П. Лумумбы
+- [1032249184@pfur.ru](mailto:1032249184@pfur.ru)
+- <https://geldiyevy.github.io/ru/>
 
 # Вводная часть
 
-## Актуальность
-
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
-
-## Объект и предмет исследования
-
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
-
 ## Цели и задачи
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+Получить навыки настройки пакетного фильтра в Linux.
 
-## Материалы и методы
+1. Используя firewall-cmd:
+   – определить текущую зону по умолчанию;
+   – определить доступные для настройки зоны;
+   – определить службы, включённые в текущую зону;
+   – добавить сервер VNC в конфигурацию брандмауэра.
+2. Используя firewall-config:
+   – добавьте службы http и ssh в зону public;
+   – добавьте порт 2022 протокола UDP в зону public;
+   – добавьте службу ftp.
+3. Выполните задание для самостоятельной работы (раздел 13.5).
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+# Выполнение лабораторной работы
 
-# Создание презентации
+# Управление брандмауэром с помощью firewall-cmd
 
-## Процессор `pandoc`
+## Получите полномочия администратора:
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+su -
 
-## Формат `pdf`
+![1](image/1.png)
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+## Определите текущую зону по умолчанию, введя:
 
-## Код для формата `pdf`
+firewall-cmd --get-default-zone
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+![2](image/2.png)
 
-## Формат `html`
+## Определите доступные зоны, введя:
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+firewall-cmd --get-zones
 
-## Код для формата `html`
+![3](image/3.png)
 
-- Тема задаётся в файле `Makefile`
+## Посмотрите службы, доступные на вашем компьютере, используя
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+firewall-cmd --get-services
 
-## Получающиеся форматы
+![4](image/4.png)
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+## Определите доступные службы в текущей зоне:
 
-# Элементы презентации
+firewall-cmd --list-services
 
-## Актуальность
+![5](image/5.png)
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+## Сравните результаты вывода информации при использовании команды
 
-## Цели и задачи
+firewall-cmd --list-all
 
-- Не формулируйте более 1--2 целей исследования
+![6](image/6.png)
 
-## Материалы и методы
+## И команды
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
+firewall-cmd --list-all --zone=public
 
-## Содержание исследования
+![7](image/7.png)
 
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
+## Добавьте сервер VNC в конфигурацию брандмауэра:
 
-## Результаты
+firewall-cmd --add-service=vnc-server
 
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+![8](image/8.png)
 
+## Проверьте, добавился ли vnc-server в конфигурацию:
 
-## Итоговый слайд
+firewall-cmd --list-all
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+![9](image/9.png)
 
-# Рекомендую
+## Перезапустите службу firewalld:
 
-## Принцип 10/20/30
+systemctl restart firewalld
 
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
+![10](image/10.png)
 
-## Связь слайдов
+## Проверьте, есть ли vnc-server в конфигурации:
 
-::: incremental
+firewall-cmd --list-all
 
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
+![11](image/11.png)
 
-:::
+## Обратите внимание, что служба vnc-server больше не указана. Поясните, почему это произошло.
 
-## Количество сущностей
+- Мы включили службы только для нынешней сессии
 
-::: incremental
+## Добавьте службу vnc-server ещё раз, но на этот раз сделайте её постоянной, используя команду
 
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
+firewall-cmd --add-service=vnc-server --permanent
 
-:::
+![12](image/12.png)
 
-## Общие рекомендации
+## Проверьте наличие vnc-server в конфигурации:
 
-::: incremental
+firewall-cmd --list-all
+Вы увидите, что VNC-сервер не указан. Службы, которые были добавлены в конфигурацию на диске, автоматически не добавляются в конфигурацию времени выполнения.
 
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
+![13](image/13.png)
 
-:::
+## Перезагрузите конфигурацию firewalld и просмотрите конфигурацию времени выполнения:
 
-## Представление данных
+firewall-cmd --reload
+firewall-cmd --list-all
 
-::: incremental
+![14](image/14.png)
 
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
+## Добавьте в конфигурацию межсетевого экрана порт 2022 протокола TCP:
 
-:::
+firewall-cmd --add-port=2022/tcp --permanent
+
+![15](image/15.png)
+
+## Затем перезагрузите конфигурацию firewalld:
+
+firewall-cmd --reload
+
+![16](image/16.png)
+
+## Проверьте, что порт добавлен в конфигурацию:
+
+firewall-cmd --list-all
+
+![17](image/17.png)
+
+# Управление брандмауэром с помощью firewall-config
+
+## Откройте терминал и под учётной записью своего пользователя запустите интерфейс GUI firewall-config:
+
+firewall-config
+Если служба отсутствует, то система предложит вам её установить. Также при запуске потребуется ввести пароль пользователя с полномочиями управления этой службой.
+
+![18](image/18.png)
+
+## Нажмите выпадающее меню рядом с параметром Configuration. Откройте раскрывающийся список и выберите Permanent.
+
+Это позволит сделать постоянными все изменения, которые вы вносите при конфигурировании.
+
+![19](image/19.png)
+
+## Выберите зону public и отметьте службы http, https и ftp, чтобы включить их.
+
+![20](image/20.png)
+
+## Выберите вкладку Ports и на этой вкладке нажмите Add . Введите порт 2022 и протокол udp, нажмите ОК , чтобы добавить их в список.
+
+![21](image/21.png)
+
+## Закройте утилиту firewall-config.
+
+![22](image/22.png)
+
+## В окне терминала введите
+
+firewall-cmd --list-all
+Обратите внимание, что изменения, которые вы только что внесли, ещё не вступили в силу. Это связано с тем, что вы настроили их как постоянные изменения, а не как изменения времени выполнения.
+
+![23](image/23.png)
+
+## Перегрузите конфигурацию firewall-cmd:
+
+firewall-cmd --reload
+и список доступных сервисов:
+firewall-cmd --list-all
+Вы увидите, что изменения были применены
+
+![24](image/24.png)
+
+# Самостоятельная работа
+
+## Создайте конфигурацию межсетевого экрана, которая позволяет получить доступ к следующим службам:
+
+– telnet;
+– imap;
+– pop3;
+– smtp.
+
+![25](image/25.png)
+
+## Сделайте это как в командной строке (для службы telnet), так и в графическом интерфейсе (для служб imap, pop3, smtp).
+
+![26](image/26.png)
+
+##
+
+![27](image/27.png)
+
+##
+
+![28](image/28.png)
+
+## Убедитесь, что конфигурация является постоянной и будет активирована после перезагрузки компьютера.
+
+![29](image/29.png)
+
+## Выводы
+
+Я получил навыки настройки пакетного фильтра в Linux.
