--- a/labs/lab13/report/os2--lab13--report.qmd
+++ b/labs/lab13/report/os2--lab13--report.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,8 +14,8 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа № 13"
+subtitle: "Фильтр пакетов"
 license: "CC BY"
 ## Generic options
 lang: ru-RU
@@ -34,7 +34,7 @@ bibliography:
 csl: _resources/csl/gost-r-7-0-5-2008-numeric.csl
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   pdf:
     toc: true
     number-sections: true
@@ -42,22 +42,22 @@ format:
     toc-depth: 2
     lof: true # List of figures
     lot: true # List of tables
-#### Document
+    #### Document
     documentclass: scrreprt
     papersize: a4
     fontsize: 12pt
     linestretch: 1.5
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-#### Biblatex
+    #### Biblatex
     cite-method: biblatex
     biblio-style: gost-numeric
     biblatexoptions:
       - backend=biber
       - langhook=extras
       - autolang=other*
-#### Misc options
+    #### Misc options
     csquotes: true
     indent: true
     header-includes: |
@@ -65,7 +65,7 @@ format:
       \usepackage{float}
       \floatplacement{figure}{H}
       \usepackage[math,RM={Scale=0.94},SS={Scale=0.94},SScon={Scale=0.94},TT={Scale=MatchLowercase,FakeStretch=0.9},DefaultFeatures={Ligatures=Common}]{plex-otf}
-### Docx output format
+  ### Docx output format
   docx:
     toc: true
     number-sections: true
@@ -74,44 +74,212 @@ format:
 
 # Цель работы
 
-Здесь приводится формулировка цели лабораторной работы. Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.  Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Получить навыки настройки пакетного фильтра в Linux.
 
 # Задание
 
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
-
-# Теоретическое введение
-
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+1. Используя firewall-cmd:
+   – определить текущую зону по умолчанию;
+   – определить доступные для настройки зоны;
+   – определить службы, включённые в текущую зону;
+   – добавить сервер VNC в конфигурацию брандмауэра.
+2. Используя firewall-config:
+   – добавьте службы http и ssh в зону public;
+   – добавьте порт 2022 протокола UDP в зону public;
+   – добавьте службу ftp.
+3. Выполните задание для самостоятельной работы (раздел 13.5).
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## Управление брандмауэром с помощью firewall-cmd
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+1. Получите полномочия администратора:
+   su -
+
+   ![1](image/1.png)
+
+2. Определите текущую зону по умолчанию, введя:
+   firewall-cmd --get-default-zone
+
+   ![2](image/2.png)
+
+3. Определите доступные зоны, введя:
+   firewall-cmd --get-zones
+
+   ![3](image/3.png)
+
+4. Посмотрите службы, доступные на вашем компьютере, используя
+   firewall-cmd --get-services
+
+   ![4](image/4.png)
+
+5. Определите доступные службы в текущей зоне:
+   firewall-cmd --list-services
+
+   ![5](image/5.png)
+
+6. Сравните результаты вывода информации при использовании команды
+   firewall-cmd --list-all
+
+   ![6](image/6.png)
+
+   и команды
+   firewall-cmd --list-all --zone=public
+
+   ![7](image/7.png)
+
+7. Добавьте сервер VNC в конфигурацию брандмауэра:
+   firewall-cmd --add-service=vnc-server
+
+   ![8](image/8.png)
+
+8. Проверьте, добавился ли vnc-server в конфигурацию:
+   firewall-cmd --list-all
+
+   ![9](image/9.png)
+
+9. Перезапустите службу firewalld:
+   systemctl restart firewalld
+
+   ![10](image/10.png)
+
+10. Проверьте, есть ли vnc-server в конфигурации:
+    firewall-cmd --list-all
+
+    ![11](image/11.png)
+
+    Обратите внимание, что служба vnc-server больше не указана. Поясните, почему это произошло.
+
+    - Мы включили службы только для нынешней сессии
+
+11. Добавьте службу vnc-server ещё раз, но на этот раз сделайте её постоянной, используя команду
+    firewall-cmd --add-service=vnc-server --permanent
+
+    ![12](image/12.png)
+
+12. Проверьте наличие vnc-server в конфигурации:
+    firewall-cmd --list-all
+    Вы увидите, что VNC-сервер не указан. Службы, которые были добавлены в конфигурацию на диске, автоматически не добавляются в конфигурацию времени выполнения.
+
+    ![13](image/13.png)
+
+13. Перезагрузите конфигурацию firewalld и просмотрите конфигурацию времени
+    выполнения:
+    firewall-cmd --reload
+    firewall-cmd --list-all
+
+    ![14](image/14.png)
+
+14. Добавьте в конфигурацию межсетевого экрана порт 2022 протокола TCP:
+    firewall-cmd --add-port=2022/tcp --permanent
+
+    ![15](image/15.png)
+
+    Затем перезагрузите конфигурацию firewalld:
+    firewall-cmd --reload
+
+    ![16](image/16.png)
+
+15. Проверьте, что порт добавлен в конфигурацию:
+    firewall-cmd --list-all
+
+    ![17](image/17.png)
+
+## Управление брандмауэром с помощью firewall-config
+
+1. Откройте терминал и под учётной записью своего пользователя запустите интерфейс GUI firewall-config:
+   firewall-config
+   Если служба отсутствует, то система предложит вам её установить. Также при запуске потребуется ввести пароль пользователя с полномочиями управления этой службой.
+
+   ![18](image/18.png)
+
+2. Нажмите выпадающее меню рядом с параметром Configuration. Откройте раскрывающийся список и выберите Permanent. Это позволит сделать постоянными все изменения, которые вы вносите при конфигурировании.
+
+   ![19](image/19.png)
+
+3. Выберите зону public и отметьте службы http, https и ftp, чтобы включить их.
+
+   ![20](image/20.png)
+
+4. Выберите вкладку Ports и на этой вкладке нажмите Add . Введите порт 2022 и протокол udp, нажмите ОК , чтобы добавить их в список.
+
+   ![21](image/21.png)
+
+5. Закройте утилиту firewall-config.
+
+   ![22](image/22.png)
+
+6. В окне терминала введите
+   firewall-cmd --list-all
+   Обратите внимание, что изменения, которые вы только что внесли, ещё не вступили в силу. Это связано с тем, что вы настроили их как постоянные изменения, а не как изменения времени выполнения.
+
+   ![23](image/23.png)
+
+7. Перегрузите конфигурацию firewall-cmd:
+   firewall-cmd --reload
+   и список доступных сервисов:
+   firewall-cmd --list-all
+   Вы увидите, что изменения были применены
+
+   ![24](image/24.png)
+
+# Самостоятельная работа
+
+1. Создайте конфигурацию межсетевого экрана, которая позволяет получить доступ к следующим службам:
+   – telnet;
+   – imap;
+   – pop3;
+   – smtp.
+
+   ![25](image/25.png)
+
+2. Сделайте это как в командной строке (для службы telnet), так и в графическом интерфейсе (для служб imap, pop3, smtp).
+
+   ![26](image/26.png)
+
+   ![27](image/27.png)
+
+   ![28](image/28.png)
+
+3. Убедитесь, что конфигурация является постоянной и будет активирована после перезагрузки компьютера.
+
+   ![29](image/29.png)
+
+# Контрольные вопросы
+
+1. Какая служба должна быть запущена перед началом работы с менеджером конфигурации брандмауэра firewall-config? - Служба firewalld (или демон firewalld).
+
+2. Какая команда позволяет добавить UDP-порт 2355 в конфигурацию брандмауэра в зоне по умолчанию?
+
+- firewall-cmd --add-port=2355/udp.
+
+3. Какая команда позволяет показать всю конфигурацию брандмауэра во всех зонах?
+
+- firewall-cmd --list-all-zones
+
+4. Какая команда позволяет удалить службу vnc-server из текущей конфигурации брандмауэра?
+
+- firewall-cmd --remove-service=vnc-server
+
+5. Какая команда firewall-cmd позволяет активировать новую конфигурацию, добавленную опцией --permanent?
+
+- firewall-cmd --reload.
+
+6. Какой параметр firewall-cmd позволяет проверить, что новая конфигурация была добавлена в текущую зону и теперь активна?
+
+- --list-all.
+
+7. Какая команда позволяет добавить интерфейс eno1 в зону public?
+
+- firewall-cmd --zone=public --add-interface=eno1 или --change-interface=eno1
+
+8. Если добавить новый интерфейс в конфигурацию брандмауэра, пока не указана зона, в какую зону он будет добавлен?
+
+- В зону по умолчанию (обычно это зона public).
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
+Я получил навыки настройки пакетного фильтра в Linux.
 
 # Список литературы{.unnumbered}
 
